# hypergo

./: .gitignore  Cargo.toml  index.html  page.html
pkg/: hypergo.d.ts  hypergo.js  hypergo_bg.js  hypergo_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
src/game/: mod.rs  render.rs
src/geometry/: euclidian.rs  hyperbolic.rs  mod.rs
src/shaders/: outer_shader.wgsl  outer_shader_ms.wgsl  outer_shader_noms.wgsl  outer_shader_shared.wgsl  shader.wgsl
