[package]
name = "hypergo"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.20"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
more-asserts = "0.3"
circular-buffer = "0.1.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[features]
euclidian_geometry = []
