[package]
name = "hypergo"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = "0.20"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
more-asserts = "0.3"
circular-buffer = "0.1.7"
clap = { version = "4.5.6", features = ["derive"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.20", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
euclidian_geometry = []
